cleaned up notebooks

--- a/kepler-confirmed-planets/notebooks/Modeling.ipynb
+++ b/kepler-confirmed-planets/notebooks/Modeling.ipynb
@@ -1284,25 +1284,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_params = { 'nthread': [4],\n",
+    "xgb_params = { 'nthread': [3, 4, 5],\n",
     "              'objective': ['binary:logistic'],\n",
-    "              'learning_rate': [0.05],\n",
-    "              'max_depth': [5, 10, 15, 20],\n",
-    "              'reg_alpha': [1.1, 1.2, 1.3, 1.4],\n",
-    "              'reg_lambda': [1.1, 1.2, 1.3, 1.4],\n",
-    "              'subsample': [0.7, 0.8, 0.9, 1.0],\n",
-    "              'n_estimators': [50, 100, 150, 200, 250],\n",
-    "              'scale_pos_weight': [10, 20, 30, 41]\n",
+    "              'learning_rate': [5, 10],\n",
+    "              'max_depth': [9, 10, 11],\n",
+    "              'reg_alpha': [1.09, 1.1, 1.11],\n",
+    "              'reg_lambda': [1.19, 1.2, 1.25],\n",
+    "              'subsample': [0.81, 0.83, 0.89],\n",
+    "              'n_estimators': [180, 200, 220],\n",
+    "              'scale_pos_weight': [5, 8, 10]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,14 +1320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 5120 candidates, totalling 15360 fits\n"
+      "Fitting 3 folds for each of 4374 candidates, totalling 13122 fits\n"
      ]
     },
     {
@@ -1335,66 +1335,23 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    4.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 138 tasks      | elapsed:    6.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 341 tasks      | elapsed:    9.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 624 tasks      | elapsed:   14.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 989 tasks      | elapsed:   23.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 1434 tasks      | elapsed:   38.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 1961 tasks      | elapsed:  1.0min\n",
-      "[Parallel(n_jobs=-1)]: Done 2568 tasks      | elapsed:  1.8min\n",
-      "[Parallel(n_jobs=-1)]: Done 3257 tasks      | elapsed:  2.7min\n",
-      "[Parallel(n_jobs=-1)]: Done 4026 tasks      | elapsed:  3.6min\n",
-      "[Parallel(n_jobs=-1)]: Done 4877 tasks      | elapsed:  4.1min\n",
-      "[Parallel(n_jobs=-1)]: Done 5808 tasks      | elapsed:  4.9min\n",
-      "[Parallel(n_jobs=-1)]: Done 6821 tasks      | elapsed:  6.3min\n",
-      "[Parallel(n_jobs=-1)]: Done 7914 tasks      | elapsed:  8.0min\n",
-      "[Parallel(n_jobs=-1)]: Done 9089 tasks      | elapsed:  8.8min\n",
-      "[Parallel(n_jobs=-1)]: Done 10344 tasks      | elapsed: 10.4min\n",
-      "[Parallel(n_jobs=-1)]: Done 11681 tasks      | elapsed: 12.5min\n",
-      "[Parallel(n_jobs=-1)]: Done 13098 tasks      | elapsed: 13.4min\n",
-      "[Parallel(n_jobs=-1)]: Done 14597 tasks      | elapsed: 15.4min\n",
-      "[Parallel(n_jobs=-1)]: Done 15360 out of 15360 | elapsed: 16.8min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 138 tasks      | elapsed:    5.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 341 tasks      | elapsed:    9.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 624 tasks      | elapsed:   16.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 989 tasks      | elapsed:   25.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 1434 tasks      | elapsed:   38.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 1961 tasks      | elapsed:   52.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 2568 tasks      | elapsed:  1.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 3257 tasks      | elapsed:  1.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 4026 tasks      | elapsed:  2.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 4877 tasks      | elapsed:  2.6min\n",
+      "[Parallel(n_jobs=-1)]: Done 5808 tasks      | elapsed:  3.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 6821 tasks      | elapsed:  3.6min\n",
+      "[Parallel(n_jobs=-1)]: Done 7914 tasks      | elapsed:  4.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 9089 tasks      | elapsed:  4.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 10344 tasks      | elapsed:  5.4min\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[14:57:10] WARNING: /Users/travis/build/dmlc/xgboost/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=3,\n",
-       "             estimator=XGBClassifier(base_score=None, booster=None,\n",
-       "                                     colsample_bylevel=None,\n",
-       "                                     colsample_bynode=None,\n",
-       "                                     colsample_bytree=None, gamma=None,\n",
-       "                                     gpu_id=None, importance_type='gain',\n",
-       "                                     interaction_constraints=None,\n",
-       "                                     learning_rate=None, max_delta_step=None,\n",
-       "                                     max_depth=None, min_child_weight=None,\n",
-       "                                     missing=nan, monotone_constraints=None,\n",
-       "                                     n_estimators=100, n_jobs...\n",
-       "                                     scale_pos_weight=None, subsample=None,\n",
-       "                                     tree_method=None, validate_parameters=None,\n",
-       "                                     verbosity=None),\n",
-       "             n_jobs=-1,\n",
-       "             param_grid={'learning_rate': [0.05], 'max_depth': [5, 10, 15, 20],\n",
-       "                         'n_estimators': [50, 100, 150, 200, 250],\n",
-       "                         'nthread': [4], 'objective': ['binary:logistic'],\n",
-       "                         'reg_alpha': [1.1, 1.2, 1.3, 1.4],\n",
-       "                         'reg_lambda': [1.1, 1.2, 1.3, 1.4],\n",
-       "                         'scale_pos_weight': [10, 20, 30, 41],\n",
-       "                         'subsample': [0.7, 0.8, 0.9, 1.0]},\n",
-       "             verbose=2)"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1510,30 +1467,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{'class_weight': {1: 30, 0: 1},\n",
-    " 'colsample_bytree': 0.7,\n",
-    " 'max_depth': 15,\n",
-    " 'min_split_gain': 0.4,\n",
-    " 'n_estimators': 250,\n",
-    " 'num_leaves': 50,\n",
-    " 'reg_alpha': 1.1,\n",
-    " 'reg_lambda': 1.5,\n",
-    " 'subsample': 0.7,\n",
-    " 'subsample_freq': 20}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
     "lgbm_params = {'n_estimators': [100, 150, 200, 250],\n",
-    "    'colsample_bytree': [0.7, 0.75],\n",
+    "    'colsample_bytree': [0.65, 0.7],\n",
     "    'max_depth': [5, 15, 20],\n",
     "    'num_leaves': [30, 40, 50],\n",
     "    'reg_alpha': [1.0, 1.1],\n",
@@ -1618,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1575,7 @@
        " 'subsample_freq': 20}"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
