comment section to modeling

--- a/notes:data/notebooks/Modeling.ipynb
+++ b/notes:data/notebooks/Modeling.ipynb
@@ -1718,7 +1718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LightGBM did not perform the best in F1 score but it did quite well in recall in determining the minority class, which was the amount of exoplanets that fell within their habitable zone. This was only a mere 100 exoplanets that resided within the habitable zone. If we where solely looking for exoplanets that fall within the habitable zone, then I would focus soley on Light GBM. When dealing with exoplanets, we want to consider all options as not all exoplanets are the same. They will differ in enviroments, albedo effects "
+    "LightGBM did not perform the best in F1 score but it did quite well in recall in determining the minority class, which was the amount of exoplanets that fell within their habitable zone. This was only a mere 100 exoplanets that resided within the habitable zone. If we where solely looking for exoplanets that fall within the habitable zone, then I would focus soley on Light GBM. When dealing with exoplanets, we want to consider all options as not all exoplanets are the same. They will differ in enviroments, albedo effects, habitable zones regions, and even habitable zones within the planet. "
    ]
   },
   {
