Changed name of pciture

--- a/notes:data/notebooks/EDA.ipynb
+++ b/notes:data/notebooks/EDA.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
     "ax.set_title('Range of Stellar Temperatures')\n",
     "ax.set_xlabel('Stellar Temperatures in Kelvin')\n",
     "ax.set_ylabel('Stars')\n",
-    "plt.savefig('Range of Stellar Temperatures')\n",
+    "plt.savefig('Range_Stellar_Temps')\n",
     "plt.show();"
    ]
   },
